# LoopSpec

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.bat  setup.ps1  setup.py  setup.sh
examples/: demo_correction_loop.py
examples/oxygen-atom-sim/: AGENTS.md  EVALUATION.md  index.html  test-verify.html  verify-static.ps1
examples/oxygen-atom-sim/.loopspec/: CHANGELOG.md  CONTEXT.md  GOAL.md  LEARNINGS.md  PLAN.md  PROTOCOL.md  STATUS.json  STATUS.md  TESTS.md
examples/sorting-visualizer/: app.js  index.html  style.css  test-node.js  test-verify.js  test.html
examples/sorting-visualizer/.loopspec/: CHANGELOG.md  CONTEXT.md  GOAL.md  LEARNINGS.md  PLAN.md  STATUS.md  TESTS.md
loopspec/: __init__.py  cli.py
loopspec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
loopspec/core/: __init__.py  context.py  loop.py  metrics.py  validator.py
templates/: CHANGELOG.md  CONTEXT.md  GOAL.md  LEARNINGS.md  PLAN.md  PROTOCOL.md  QUESTIONS.md  STATUS.md  TESTS.md
tests/: test_context.py  test_loop.py  test_metrics.py  test_validator.py
