[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "loopspec"
version = "2.0.0"
description = "Self-correcting, context-aware AI development protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
loopspec = "loopspec.cli:main"